# sycl-collision-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  benchmark.py  plotBenchmark.py
assets/: OpenSans.conf  OpenSans.tga  README.md  resources.conf
src/: Actor.cpp  Actor.h  Application.cpp  Application.h  CollisionCalculator.cpp  CollisionCalculator.h  Constants.h  Edge.h  ParallelSimulation.cpp  ParallelSimulation.h  ParallelState.cpp  ParallelState.h  SequentialSimulation.cpp  SequentialSimulation.h  SequentialState.h  Shape.cpp  Shape.h  Simulation.cpp  Simulation.h  State.cpp  State.h  TextRenderer.cpp  TextRenderer.h  USMData.h  Util.cpp  Util.h  Wall.h  World.cpp  World.h
